# DangerCrossing

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
services/cron/: Dockerfile  danger_maker.py  requirements.txt
services/nginx/: Dockerfile
services/nginx/conf.d/: nginx.conf
services/nginx/ssl/certs/: dangercrossing.crt
services/tile_server/: Dockerfile  entrypoint.sh
services/tile_server/extracts/: missouri_et_al.osm.pbf
services/web/: Dockerfile  requirements.txt
services/web/danger_crossing/: setup.cfg
services/web/danger_crossing/danger_crossing/: __init__.py  func.py  views.py
services/web/danger_crossing/danger_crossing/static/js/: heatmap.js
services/web/danger_crossing/danger_crossing/templates/: index.html
services/web/danger_crossing/danger_crossing/templates/modals/: accident_cluster.html  accident_info.html
