[metadata]
name = danger_crossing
version = 2.5.5
url = https://DangerCrossing.com
maintainer = Dylan Mounts
maintainer_email = dmounts@gmail.com
description = Traffic accident heatmap for Missouri.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[coverage:run]
branch = True
source =
    danger_crossing